testsuite/tests/typecheck/should_fail/T18939_Fail.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE ExplicitForAll #-}
{-# LANGUAGE PolyKinds #-}
module T18939_Fail where

data F (f :: forall a -> a)
