testsuite/tests/typecheck/should_fail/T18939_Fail.stderr

T18939_Fail.hs:6:1: error:
    • Illegal polymorphic type: forall a -> a
    • In the data type declaration for ‘F’
    Suggested fix: Perhaps you intended to use RankNTypes